--- a/rest/restapp/static/menu.html
+++ b/rest/restapp/static/menu.html
@@ -1,11 +1,60 @@
 <html>
     <head>
-        <title>menu</title>
+        <title>Home</title>
         <link rel="stylesheet" href="menu1.css">
     </head>
     <body>
-        <div class="bg">
-
+        <div class="background">
+        <div class="contents">
+            <a href="home.html">HOME</a>
+            <a href="menu.html">MENU</a>
+            <a href="admin.html">ADMIN</a>
+            <a href="contact.html">CONTACT</a>
+        </div>
+        <div class="menu">
+            <h1><b>MENU</b></h1>
+        </div >
+        <div class="menugrid">
+            <div class="menuitem">
+                <img src="cold soy milk noodles.jpeg" width="300" height="150">
+                <h1>cold milk noodles</h1>
+                <p>Rs.200</p>
+            </div>
+            <div class="menuitem">
+                <img src="hotpot.jpeg" width="300" height="150">
+                <h1>Hotpot</h1>
+                <p>Rs.500</p>
+            </div>
+            <div class="menuitem">
+                <img src="Jajangmyeon.jpeg" width="300" height="150">
+                <h1>Jajangmyeon</h1>
+                <p>Rs.800</p>
+            </div>
+            <div class="menuitem">
+                <img src="Kimchi-Jeon.jpeg" width="300" height="150">
+                <h1>Kimchi-Jeon</h1>
+                <p>Rs.300</p>
+            </div>
+            <div class="menuitem">
+                <img src="Soft Tofu Stew.jpeg" width="300" height="150">
+                <h1>Tofu stew</h1>
+                <p>Rs. 700</p>
+            </div>
+            <div class="menuitem">
+                <img src="Tteokbokki.jpeg" width="300" height="150">
+                <h1>Tteokbokki</h1>
+                <p>Rs. 450</p>
+            </div>
+            <div class="menuitem">
+                <img src="mochi.jpeg" width="300" height="150">
+                <h1>Blueberry Mochi</h1>
+                <p>Rs. 150</p>
+            </div>
+            
+        </div>
+        <footer class="copyrights">
+            &copy; POORNIMA J (25015718)
+        </footer>
         </div>
     </body>
 </html>
